# weiss-xmonad

./: .gitignore  LICENSE  README.md  WeissXmonad.cabal  cabal.project  devshell.toml  flake.nix  fourmolu.yaml  hie.yaml  weiss-xmonad.cabal
.github/workflows/: CI.yaml
app/: Main.hs
src/: Config.hs  MyPromptPass.hs  MyWorkspace.hs  MyWorkspaces.hs  MyXMonad.hs  MyXmobar.hs  TreeActions.hs  Treeselect.hs  Utils.hs  WeissEasyMotion.hs  WeissLogger.hs  WeissNamedScratchpad.hs  WeissPromptPass.hs  WeissScratchpad.hs  WeissWindowOperations.hs  WeissWorkspace.hs  WeissWorkspaces.hs  WeissXMonad.hs  WeissXmobar.hs  WorkspaceFamily.hs
src/Utils/: WindowOps.hs
test/: Spec.hs
weiss-taffybar/: taffybar.hs
