cabal-version:   2.4
name:            WeissXmonad
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          weiss
maintainer:      weiss <kingbaiing@163.com>
copyright:       2024 weiss
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/WeissXmonad#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/WeissXmonad.git

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -Wno-missing-signatures

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Config
    Utils
    WeissPromptPass
    WeissScratchpad
    WeissWindowOperations
    WeissXmobar
    WeissXMonad
    WorkspaceFamily
    TreeActions

  build-depends:
    , base
    , containers
    , directory
    , extra                 >=1.7.14
    , filepath
    , hashable
    , MissingH
    , regex-compat
    , transformers
    , Unique
    , unix
    , unordered-containers
    , xmonad
    , xmonad-contrib >= 0.18.1
