cabal-version:   2.4
name:            weiss-xmonad
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          weiss
maintainer:      weiss <kingbaiing@163.com>
copyright:       2024 weiss
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/weiss-xmonad#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/weiss-xmonad.git

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    MyLogger
    MyNamedScratchpad
    MyPromptPass
    MyWindowOperations
    MyWorkspace
    MyXmobar
    MyXMonad

  build-depends:
    , base
    , containers
    , directory
    , filepath
    , MissingH
    , regex-compat
    , Unique
    , unix
    , xmonad
    , xmonad-contrib

-- executable weiss-xmonad-exe
--   import:         common-options
--   hs-source-dirs: app
--   main-is:        Main.hs
--   build-depends:  weiss-xmonad
--   ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite weiss-xmonad-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , QuickCheck
    , weiss-xmonad

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark weiss-xmonad-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , weiss-xmonad

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
