cabal-version:   3.8
name:            weiss-xmonad
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          weiss
maintainer:      weiss <kingbaiing@163.com>
copyright:       2024 weiss
tested-with:     GHC ==9.6.6
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/weiss-xmonad#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/weiss-xmonad.git

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MonadComprehensions
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    , base
    , containers
    , directory
    , extra                 >=1.7.14
    , filepath
    , hashable
    , MissingH
    , regex-compat
    , transformers
    , Unique
    , unix
    , unordered-containers
    , xmonad                >=0.18
    , xmonad-contrib        >=0.18

  exposed-modules:
    Config
    TreeActions
    Utils
    WeissPromptPass
    WeissScratchpad
    WeissWindowOperations
    WeissXmobar
    WeissXMonad
    WorkspaceFamily

executable weiss-xmonad-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  weiss-xmonad
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable weiss-taffybar-exe
  import:         common-options
  hs-source-dirs: weiss-taffybar
  main-is:        taffybar.hs
  build-depends:
    , base
    , bytestring
    , data-default 
    , taffybar      >=4.1.0
    , xmonad        >=0.18

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
